# logio

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
resources/images/: atlas.pdn
saves/: 1  bench  comp  deshifrator  summ  test_bin  trans  xor
source/: buffer.cpp  buffer.hpp  chunk.hpp  defines.hpp  element.hpp  element_data.hpp  field.cpp  field.hpp  game.cpp  game.hpp  grid.hpp  imgui_theme.hpp  main.cpp  rotation.hpp  selection.cpp  selection.hpp  ui.cpp  ui.hpp  world.cpp  world.hpp
source/elements/: and.cpp  and.hpp  blocker.cpp  blocker.hpp  delay.cpp  delay.hpp  extractor.cpp  extractor.hpp  forward_splitter.cpp  forward_splitter.hpp  fr_splitter.cpp  fr_splitter.hpp  jump.cpp  jump.hpp  memory.cpp  memory.hpp  not.cpp  not.hpp  side_splitter.cpp  side_splitter.hpp  tree.cpp  tree.hpp  wire.cpp  wire.hpp
